--- a/Tutorial/CMakeLists.txt
+++ b/Tutorial/CMakeLists.txt
@@ -8,4 +8,6 @@ add_subdirectory(DLIP_Tutorial_spatial_filter)
 
 add_subdirectory(DLIP_Tutorial_Thresholding_Morphology)
 
+add_subdirectory(DLIP_Tutorial_Edge_Line_Circle_Detection)
+
 #add_subdirectory()
