DLIP 240410 After Week6 Camera Calibration Color Processing DLIP LAB2

--- a/Include/CMakeLists.txt
+++ b/Include/CMakeLists.txt
@@ -1,4 +1,5 @@
-SET(SOURCE DLIP.cpp)
-SET(HEADER DLIP.hpp)
+SET(SOURCE DLIP.cpp tinyxml2.cpp)
+
+SET(HEADER DLIP.hpp tinyxml2.h cameraParam.h)
 
 add_library(Include STATIC ${SOURCE} ${HEADER})
