240419 Before Class Python Practice

--- a/Tutorial/DLIP_Tutorial_Edge_Line_Circle_Detection/CMakeLists.txt
+++ b/Tutorial/DLIP_Tutorial_Edge_Line_Circle_Detection/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(Canny DLIP_Tutorial_Canny.cpp)
 set(Hough DLIP_Tutorial_Hough.cpp)
 set(Edge DLIP_Tutorial_Corner_Detection.cpp)
-#HoughCircle
+set(Circle DLIP_Tutorial_HoughCircle.cpp)
 
 set(Optical DLIP_Tutorial_OpticalFlow.cpp)
 
@@ -9,3 +9,4 @@ add_executable(Canny_Detect ${Canny})
 add_executable(Hough_Detect ${Hough})
 add_executable(EdgeDetection ${Edge})
 add_executable(OpticalFlow ${Optical})
+add_executable(HoughCircle ${Circle})
