--- a/Tutorial/DLIP_Tutorial_spatial_filter/CMakeLists.txt
+++ b/Tutorial/DLIP_Tutorial_spatial_filter/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(FILTER1 filter_demo_21900031_jinkwak.cpp)
 set(FILTER2 filter_demo_webcam_21900031_jinkwak.cpp)
 
-add_executable(FilterImage ${FILTER1})
+add_executable(Filtering ${FILTER1})
 
 add_executable(FilterWeb  ${FILTER2})
