DLIP 24.04.30 LAB 2 Finish Tested-by: @Jin Kwak

--- a/LAB/LAB2/CMakeLists.txt
+++ b/LAB/LAB2/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SOURCE DLIP_LAB2_21900031_JinKwak.cpp)
 
-add_executable(LAB2 ${SOURCE})
+add_executable(LAB2_1 ${SOURCE})
 
-add_executable(LAB2_Mouse LAB2_Get_MouseClick.cpp)
-
-add_executable(LAB2_TopView DLIP_LAB2.cpp)
+add_executable(LAB2 DLIP_LAB2.cpp)
 add_executable(LAB2_FrontView DLIP_LAB2_Front.cpp)
+
+add_executable(LAB2_Test upperTest.cpp)
